--- a/configs/auth-service.yaml
+++ b/configs/auth-service.yaml
@@ -17,9 +17,9 @@ spring.security.oauth2.client:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/user_db
-    username: postgres
-    password: root
+    url: jdbc:postgresql://${POST_SERVICE_DB_HOST}:${POST_SERVICE_DB_PORT}/${POST_SERVICE_DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -40,6 +40,6 @@ eureka:
   client:
     enabled: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${DISCOVERY_SERVICE_NAME}:${DISCOVERY_SERVICE_PORT}/eureka/
     healthcheck:
       enabled: true
