--- a/configs/auth-service.yaml
+++ b/configs/auth-service.yaml
@@ -17,7 +17,7 @@ spring.security.oauth2.client:
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
+    url: jdbc:postgresql://auth-db-service:5432/user_db
     username: auth_user
     password: auth_password
   jpa:
@@ -40,6 +40,6 @@ eureka:
   client:
     enabled: true
     service-url:
-      defaultZone: http://${DISCOVERY_SERVICE_NAME}:${DISCOVERY_SERVICE_PORT}/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
     healthcheck:
       enabled: true
